--- a/.github/workflows/pull_minimized_translations.yml
+++ b/.github/workflows/pull_minimized_translations.yml
@@ -15,7 +15,7 @@ jobs:
 
     permissions:
       contents: write  # for Git to git push
-    if: github.repository_owner == 'qgis'
+    # if: github.repository_owner == 'qgis'
     runs-on: ubuntu-latest
     env:
       # only pull to the branch we translate
