--- a/.github/workflows/pull_minimized_translations.yml
+++ b/.github/workflows/pull_minimized_translations.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Install Transifex client
       run: |
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash -s -- 1.6.17
           mv tx LICENSE -t /usr/local/bin/
 
     - shell: bash
@@ -55,10 +55,11 @@ jobs:
     - name: Download and sanitize files and folders
       run: bash ./scripts/minimize_translation.sh
 
-    - name: Show changes
+    - name: Report changed files
       run: |
-        echo "Number of files: `git status -s | wc -l`"
-        echo "List of files: `git status -s`"
+        diff_files=`git status -s`
+        echo "List of files:"; echo "$diff_files"
+        echo "Number of files: `echo "$diff_files" | wc -l`"
 
     - name: Load translations if any
       run: |
